# embeddings-router

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  config.example.toml  install.sh
docs/: api-reference.md  architecture.md  configuration.md  performance.md
scripts/: stress_test.sh  sustained_load_test.sh
src/: config.rs  db.rs  error.rs  lib.rs  main.rs
src/cli/: config_cmd.rs  down.rs  env.rs  health_cmd.rs  keys.rs  mod.rs  probe.rs  providers.rs  serve.rs  status.rs  up.rs
src/health/: health_tests.rs  mod.rs
src/mux/: accumulator.rs  adaptive.rs  adaptive_snapshot.rs  mod.rs  multiplexer.rs  multiplexer_tests.rs  policy.rs
src/provider/: cohere.rs  mod.rs  registry.rs  voyage.rs
src/retry/: mod.rs
src/server/: mod.rs
src/server/handlers/: admin_config.rs  admin_keys.rs  admin_providers.rs  embeddings.rs  health.rs  mod.rs
src/server/middleware/: auth.rs
tests/: embeddings_test.rs  integration_test.rs  keys_test.rs  server_test.rs
