[package]
name = "emr"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "emr"
path = "src/main.rs"

[dependencies]
async-trait = "0.1"
axum = { version = "0.8", features = ["macros"] }
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
argon2 = "0.5"
password-hash = { version = "0.5", features = ["getrandom"] }
rand = { version = "0.9", features = ["std"] }
subtle = "2"

[lib]
name = "emr"
path = "src/lib.rs"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
